# DACBench

./: .coverage  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  Basics_demo.ipynb  CHANGELOG.md  DAC with RL.ipynb  Demo 1.ipynb  Getting started.ipynb  Makefile  README.md  TODOS.md  example_workflow.py  flake.nix  index.html  port_52348.txt  pyproject.toml  repo_structure.md  req1.txt  requirements.txt  requirements_old.txt  run.py  run_ppo.sh  run_random_baselines.sh  run_static_baselines.sh  sas_plan  setup.cfg  setup.py  test_bench.py  test_benchmark_configs.py  test_speed.py  tox.ini  train_ppo.py
.github/: dependabot.yml
.github/workflows/: docs.yml  main.yml  pre_commit.yml  publish.yml  pytest.yml  run-python-tests.yml
algorithms/csa_gps/: README.md
algorithms/dqn/: train_dqn.py
algorithms/ppo/: train_ppo.py
benchmark_test_coverage/: daclib_benchmarks___init___py.html  daclib_benchmarks_cma_benchmark_py.html  daclib_benchmarks_fast_downward_benchmark_py.html  daclib_benchmarks_luby_benchmark_py.html  daclib_benchmarks_sigmoid_benchmark_py.html  index.html  status.json
coverage_report/: dacbench___init___py.html  dacbench_abstract_agent_py.html  dacbench_abstract_benchmark_py.html  dacbench_abstract_env_py.html  dacbench_additional_configs_onell_configs_py.html  dacbench_agents___init___py.html  dacbench_agents_dynamic_random_agent_py.html  dacbench_agents_generic_agent_py.html  dacbench_agents_simple_agents_py.html  dacbench_benchmarks___init___py.html  dacbench_benchmarks_cma_benchmark_py.html  dacbench_benchmarks_fast_downward_benchmark_py.html  dacbench_benchmarks_luby_benchmark_py.html  dacbench_benchmarks_modea_benchmark_py.html  dacbench_benchmarks_onell_benchmark_py.html  dacbench_benchmarks_sgd_benchmark_py.html  dacbench_benchmarks_sigmoid_benchmark_py.html  dacbench_challenge_benchmarks_reward_quality_challenge_reward_functions_py.html  dacbench_challenge_benchmarks_state_space_challenge_random_states_py.html  dacbench_envs___init___py.html  dacbench_envs_cma_es_py.html  dacbench_envs_cma_step_size_py.html  dacbench_envs_fast-downward_driver___init___py.html  dacbench_envs_fast-downward_driver_aliases_py.html  dacbench_envs_fast-downward_driver_arguments_py.html  dacbench_envs_fast-downward_driver_call_py.html  dacbench_envs_fast-downward_driver_cleanup_py.html  dacbench_envs_fast-downward_driver_limits_py.html  dacbench_envs_fast-downward_driver_main_py.html  dacbench_envs_fast-downward_driver_plan_manager_py.html  dacbench_envs_fast-downward_driver_portfolio_runner_py.html  dacbench_envs_fast-downward_driver_returncodes_py.html  dacbench_envs_fast-downward_driver_run_components_py.html  dacbench_envs_fast-downward_driver_util_py.html  dacbench_envs_fast-downward_fast-downward_py.html  dacbench_envs_fast_downward_py.html  dacbench_envs_luby_py.html  dacbench_envs_modea_py.html  dacbench_envs_onell_env_py.html  dacbench_envs_policies___init___py.html  (+118 more)
dacbench/: __init__.py  abstract_agent.py  abstract_benchmark.py  abstract_env.py  argument_parsing.py  logger.py  plotting.py  run_baselines.py  runner.py
dacbench/agents/: __init__.py  dynamic_random_agent.py  generic_agent.py  simple_agents.py
dacbench/benchmarks/: __init__.py  add_new_benchmark.md  autorl_benchmark.py  cma_benchmark.py  dacbo_benchmark.py  fast_downward_benchmark.py  function_approximation_benchmark.py  geometric_benchmark.py  hyflex_benchmark.py  luby_benchmark.py  modcma_benchmark.py  modea_benchmark.py  onell_benchmark.py  sgd_benchmark.py  sigmoid_benchmark.py  theory_benchmark.py  toysgd_benchmark.py
dacbench/container/: Container Roadmap.md  Containerized Benchmarks.md  container_utils.py  remote_env.py  remote_runner.py
dacbench/envs/: __init__.py  autorl.py  cma_es.py  cma_mod_stepsize.py  cma_step_size.py  dacbo.py  fast_downward.py  function_approximation.py  geometric.py  hyflex.py  luby.py  modcma.py  modea.py  onell_env.py  sgd.py  sgd_new.py  sigmoid.py  theory.py  toysgd.py
dacbench/instance_sets/: sigmoid_3D3M_test.csv
dacbench/wrappers/: __init__.py  action_tracking_wrapper.py  (+8 more)
daclib/: __init__.py  abstract_benchmark.py  abstract_env.py
development/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/: .readthedocs.yml  conf.py  index.rst  plotting.rst  requirements.txt
examples/: action_tracking.py  autorl.py  baselines_ppo.py  chainerrl_cma.py  cleanrl_ppo_on_dacbench.py  coax_ppo_cmaes.py  container.py  dac_tabular_luby.py  example_utils.py  instance_handling.py  instance_sampling.py  logger.py  multi_agent.py  multi_agent_sigmoid.py  ray_dqn_fd.py  ray_dqn_luby.py  ray_ppo.py  ray_ppo_sigmoid.py  reward_noise_wrapping.py  run_dacbench.py  smac_agent.py  state_tracking.py  tabular_luby.py  tabular_rl_luby.py  test_cma_mod_stepsize.ipynb  time_tracking.py
gymnasium_migration/: .buildinfo  genindex.html  modules.html  objects.inv  searchindex.js
htmlcov/: index.html  status.json  tests_benchmarks_test_cma_benchmark_py.html  tests_benchmarks_test_fd_benchmark_py.html  tests_benchmarks_test_luby_benchmark_py.html  tests_benchmarks_test_sigmoid_benchmark_py.html  tests_test_abstract_benchmark_py.html  tests_test_abstract_env_py.html  tests_wrappers_test_action_tracking_wrapper_py.html  tests_wrappers_test_state_tracking_wrapper_py.html  tests_wrappers_test_time_tracking_wrapper_py.html
main/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
other_requirements/: cma.json  dacbo.json  geometric.json  modcma.json  modea.json  sgd.json  sigmoid.json  theory.json  toysgd.json
runscripts/: run_optimal_baselines.sh  run_random_baselines.sh  run_static_baselines.sh
test_run/: LubyBenchmark.json  SigmoidBenchmark.json
tests/: helpers.py  test_abstract_benchmark.py  test_abstract_env.py  test_cma_benchmark.py  test_config.json  test_fd_benchmark.py  test_logger.py  test_luby_benchmark.py  test_multi_agent_interface.py  test_run_baselines.py  test_runner.py  test_sigmoid_benchmark.py
(+49418 files in other folders)
