[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3",
]
build-backend = "setuptools.build_meta"

[tool.pydocstyle]
inherit = false
ignore = 'D100,D212,D401,D203,D404,D104,D400,D415'
match = 'dacbench/.*\.py'

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::FutureWarning"
]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["dacbench/envs/fast-downward/*", "algorithms"]
include = ['dacbench/*']

[tool.coverage.html]
directory = "coverage_report"

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | dacbench/envs/fast-downward
    | algorithms
  )/
)
'''
