[metadata]
name = DACBench
version = 0.0.1
author_email = eimer@tnt.uni-hannover.de
author = Theresa Eimer <{author_email}>
home_page = https://github.com/automl/{name}
project_urls =
    Documentation = https://dacbench.readthedocs.io/en/latest/
    Project Page = https://www.tnt.uni-hannover.de/en/project/dacbench/
license = Apache 2.0
license_file = LICENSE
long_description = file: README.md
keywords =
    DAC
    Dynamic Algorithm Configuration
    HPO
classifiers =
     Programming Language :: Python :: 3 
     Natural Language :: English 
     Environment :: Console 
     Intended Audience :: Developers 
     Intended Audience :: Education 
     Intended Audience :: Science/Research 
     License :: OSI Approved :: Apache Software License 
     Operating System :: POSIX :: Linux 
     Topic :: Scientific/Engineering :: Artificial Intelligence 
     Topic :: Scientific/Engineering 
     Topic :: Software Development 

[options]
python_requires = >= 3.6
install_requires = 
    gym==0.15.3
    numpy==1.18.0
    scipy==1.4.1
    cma==2.7
    pandas==1.0.3
    matplotlib==3.1.3
    seaborn==0.11
    modea==0.4.0
    sobol_seq==0.2.0
    torchvision==0.10.0
    torch==1.9.0
    backpack-for-pytorch==1.2.0
    modcma == 0.0.2.8.2
    IOHexperimenter == 0.2.9.2
    configspace == 0.4.19

# Should be added
# [options.packages.find]
 
[options.extras_require]
dev =
    black==20.8b1
    scikit-learn==0.23.2
    flake8==3.8.4
    pytest==6.0.1
    pytest-html==3.1.1
    pytest-cov==2.7.0
    coverage[toml]>=4.0
    pre-commit==2.7.1
example = 
    chainerrl==0.7.0
    ray==1.0.0
    tabulate==0.8.7
    tensorflow==1.14
    dm-tree==0.1.5
    opencv-python==4.2.0.32
    stable-baselines==2.10.1
    jupyter==1.0.0
docs = 
    sphinxcontrib-napoleon==0.7
    sphinx-rtd-theme==0.5.1
    sphinx-autoapi==1.7.0