[metadata]
name = DACBench
version = 0.2.0
author_email = t.eimer@ai.uni-hannover.de
author = Theresa Eimer <{author_email}>
home_page = https://github.com/automl/{name}
project_urls =
    Documentation = https://dacbench.readthedocs.io/en/latest/
    Project Page = https://www.tnt.uni-hannover.de/en/project/dacbench/
license = Apache 2.0
license_file = LICENSE
long_description = file: README.md
keywords =
    DAC
    Dynamic Algorithm Configuration
    HPO
classifiers =
     Programming Language :: Python :: 3 
     Natural Language :: English 
     Environment :: Console 
     Intended Audience :: Developers 
     Intended Audience :: Education 
     Intended Audience :: Science/Research 
     License :: OSI Approved :: Apache Software License 
     Operating System :: POSIX :: Linux 
     Topic :: Scientific/Engineering :: Artificial Intelligence 
     Topic :: Scientific/Engineering 
     Topic :: Software Development 

[options]
python_requires= >=3.10
install_requires =
    gymnasium==0.27.1
    numpy==1.24.2
    scipy==1.10.1
    pandas==1.5.3
    matplotlib==3.7.1
    seaborn==0.12.2
    configspace==0.6.1
    Pyro4==4.82

# Should be added
# [options.packages.find]
 
[options.extras_require]
dev =
    black==23.1.0
    scikit-learn==1.2.2
    flake8==6.0.0
    isort==5.12.0
    pytest==7.1.0
    pytest-html==3.2.0
    pytest-cov==4.0.0
    coverage[toml]==7.2.1
    pre-commit==3.1.1
example = 
    ray[rllib]==2.3.1
    tabulate==0.9.0
    jupyter==1.0.0
    tensorflow==2.12.0
    coax==0.1.13
docs = 
    automl-sphinx-theme==0.2.0
all=
    gymnasium==0.26.3
    numpy==1.24.2
    scipy==1.10.1
    cma==3.3.0
    pandas==1.5.3
    matplotlib==3.7.1
    seaborn==0.12.2
    configspace==0.6.1
    scikit-learn==1.2.2
    torchvision==0.14.1
    torch==1.13.1
    backpack-for-pytorch==1.5.2
    modcma==0.0.2.8.4
    IOHexperimenter
    Pyro4==4.82

#Benchmarks
cma=
    cma==3.3.0
modcma=
    modcma==0.0.2.8.4
    IOHexperimenter==0.2.9.2
sgd=
    scikit-learn==1.2.2
    torchvision==0.14.1
    torch==1.13.1
    backpack-for-pytorch==1.5.2
